--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,5 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteCond %{HTTP_HOST} ^staging.mednotemr.com$ [NC,OR]
+RewriteRule (.*)$ https://www.google.com/$1 [R=301,L]
 </IfModule>
