--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^staging.mednotemr.com$ [NC,OR]
-RewriteRule (.*)$ https://www.google.com/$1 [R=301,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
